/*
Protocol buffer definition for telegram proxy service
https://grpc.io/docs/languages/python/quickstart/
For compile use next commands
pip install --pre "betterproto[compiler]"
/exchanges_wrapper$ protoc -I . --python_betterproto_out=. telegram_proxy/tlg_proxy.proto
*/

syntax = "proto3";

package tlg;

service TlgProxy {
  rpc PostMessage (Request) returns (Response) {}
  rpc GetUpdate (Request) returns (Response) {}
}

message Request {
  string bot_id = 1;
  string token = 2;
  string chat_id = 3;
  bool inline_bot = 4;
  bool inline_buttons = 5;
  string data = 6;
}

message Response {
  string bot_id = 1;
  string data = 2;
}
